fixed inner card spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* 
-.wrapper {
-   height: 2rem;
-}
-
-.typing-demo {
-   width: 22rem;
-   animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
-   white-space: nowrap;
-   overflow: hidden;
-   border-right: 3px solid;
-   --tw-text-opacity: 1;
-   color: rgb(30 64 175 / var(--tw-text-opacity));
-   font-weight: 500;
-   font-size: 3rem;
-}
-
-@keyframes typing {
-   from {
-      width: 0;
-   }
-}
-
-@keyframes blink {
-   50% {
-      border-color: transparent;
-   }
-} */
 
 @keyframes blinkCursor {
    50% {
@@ -118,4 +90,68 @@
    color: rgb(20, 83, 131);
    font-weight: bolder;
    font-size: 3rem;
+}
+
+/*  */
+
+.card {
+   --font-color: #323232;
+   --bg-color: ##f6f6f6;
+   width: 30rem;
+   height: 25rem;
+   border-radius: 20px;
+   background: var(--bg-color);
+   box-shadow: -9px 9px 18px #5a5a5a, 9px -9px 18px #ffffff;
+   display: flex;
+   flex-direction: column;
+   transition: 0.4s;
+}
+
+.card:hover {
+   transform: scale(1.02);
+   box-shadow: 0px 0px 10px 2px #5a5a5a;
+}
+
+.card__img {
+   width: 100%;
+   height: 6rem;
+   object-fit: cover;
+   border-radius: 20px 20px 0 0;
+   background-color: blueviolet;
+}
+
+.card__descr-wrapper {
+   padding: 15px;
+   display: grid;
+}
+
+.card__title {
+   color: var(--font-color);
+   text-align: center;
+}
+
+.card__descr {
+   color: var(--font-color);
+}
+
+.svg {
+   width: 25px;
+   height: 25px;
+   transform: translateY(25%);
+   fill: var(--font-color);
+}
+
+.card__links {
+   margin-top: auto;
+   display: flex;
+   justify-content: space-between;
+   align-self: flex-end;
+}
+
+.card__links .link {
+   text-decoration: none;
+}
+
+.card__links .link:hover {
+   text-decoration: underline;
 }
